--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.GymDe" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
+    <style name="Theme.GymDe" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/light_blue</item>
         <item name="colorOnPrimary">@color/white</item>
-
         <item name="colorSecondary">@color/red</item>
         <item name="colorOnSecondary">@color/white</item>
-
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-
     </style>
+
 </resources>
