--- a/app/src/main/res/navigation/register_navigation.xml
+++ b/app/src/main/res/navigation/register_navigation.xml
@@ -3,8 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/register_navigation"
-    app:startDestination="@id/genderFragment">
+    app:startDestination="@id/loginHomeScreen">
 
+    <fragment
+        android:id="@+id/loginHomeScreen"
+        android:name="com.andreesperanca.gymde.LoginHomeScreen"
+        android:label="fragment_login_home_screen"
+        tools:layout="@layout/fragment_login_home_screen" />
 
     <fragment
         android:id="@+id/genderFragment"
@@ -25,16 +30,21 @@
             android:id="@+id/action_heightFragment_to_weightFragment"
             app:destination="@id/weightFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/weightFragment"
         android:name="com.andreesperanca.gymde.WeightFragment"
         android:label="fragment_weight"
-        tools:layout="@layout/fragment_weight" />
+        tools:layout="@layout/fragment_weight" >
+        <action
+            android:id="@+id/action_weightFragment_to_focusFragment"
+            app:destination="@id/focusFragment" />
+    </fragment>
+
     <fragment
         android:id="@+id/focusFragment"
         android:name="com.andreesperanca.gymde.FocusFragment"
         android:label="fragment_focus"
         tools:layout="@layout/fragment_focus" />
-
 
 </navigation>
