--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@drawable/gymde"
+            android:src="@drawable/gymde_logo"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
