--- a/app/src/main/res/layout/fragment_login_home_screen.xml
+++ b/app/src/main/res/layout/fragment_login_home_screen.xml
@@ -1,55 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/blue"
     android:orientation="vertical"
-    app:layout_constraintVertical_bias="0."
     tools:context=".LoginHomeScreen">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-
-        app:layout_constraintVertical_bias="0.3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintVertical_bias="0.4"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="64dp"
-            android:src="@drawable/gymde" />
+            android:src="@drawable/gymde_logo"
+
+            android:layout_gravity="center"/>
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Display1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Display1"
+
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"/>
 
 
         <Button
             android:id="@+id/btn_enter"
-            android:layout_marginTop="16dp"
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Entrar" />
+            android:layout_marginTop="@dimen/small_margin"
+            android:text="@string/enter"/>
 
         <Button
             android:id="@+id/btn_createAccount"
-            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Criar conta" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
+            android:layout_marginTop="16dp"
+            android:background="@null"
+            android:text="@string/create_account"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
