feat: material design for text button

--- a/app/src/main/res/layout/fragment_login_home_screen.xml
+++ b/app/src/main/res/layout/fragment_login_home_screen.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/gymde_logo"
+            android:contentDescription="@string/gymBrandLogo"
 
             android:layout_gravity="center"/>
 
@@ -42,16 +43,19 @@
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:contentDescription="@string/enter"
             android:layout_marginTop="@dimen/small_margin"
             android:text="@string/enter"/>
 
         <Button
             android:id="@+id/btn_createAccount"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="16dp"
-            android:background="@null"
+            android:layout_marginTop="@dimen/small_margin"
+            android:textColor="@color/white"
             android:text="@string/create_account"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
