--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,90 +3,98 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginFragment">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/iv_login"
+        android:id="@+id/iv_logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
+
         android:background="@color/blue"
         android:gravity="center"
+
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/gymde_logo"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+
+            android:src="@drawable/gymde_logo" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-
-    <TextView
-        android:id="@+id/tv_SignIn"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_login"
+        style="@style/TextAppearance.Material3.HeadlineLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Login"
-        android:textSize="30sp"
+
+        android:layout_marginTop="@dimen/small_margin"
+        android:text="@string/login"
         android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_login" />
+        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
     <com.google.android.material.textfield.TextInputLayout
-        app:layout_constraintTop_toBottomOf="@id/tv_SignIn"
-        android:id="@+id/til_height"
+        android:id="@+id/til_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="48dp"
-        android:hint="Email">
+
+        android:layout_marginHorizontal="@dimen/big_margin"
+        android:hint="@string/email"
+        app:layout_constraintTop_toBottomOf="@id/tv_login">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_email"
-        app:layout_constraintTop_toBottomOf="@id/til_height"
+        android:id="@+id/til_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="48dp"
-        android:hint="Senha">
+
+        android:layout_marginHorizontal="@dimen/big_margin"
+        android:hint="@string/password"
+
+        app:layout_constraintTop_toBottomOf="@id/til_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        app:layout_constraintTop_toBottomOf="@id/til_email"
-        android:text="Entrar"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="36dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:textAlignment="center"
-        android:id="@+id/rv_noHaveAccount"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_enter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Não tem conta? Crie aqui!"
-        android:textSize="15sp"
+
+        android:layout_marginHorizontal="@dimen/big_margin"
+        android:layout_marginTop="@dimen/small_margin"
+
+        android:text="@string/enter"
+        app:layout_constraintTop_toBottomOf="@id/til_password" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/rv_noHaveAccount"
+        style="@style/TextAppearance.Material3.BodySmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginVertical="@dimen/small_margin"
+        android:text="@string/noHaveAccount"
+        android:textAlignment="center"
+
         app:layout_constraintBottom_toBottomOf="parent" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
