--- a/app/src/main/res/layout/activity_login_and_register.xml
+++ b/app/src/main/res/layout/activity_login_and_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginAndRegisterActivity">
+    tools:context=".ui.login_and_register.LoginAndRegisterActivity">
 
 
     <androidx.fragment.app.FragmentContainerView
