--- a/app/src/main/res/layout/fragment_age.xml
+++ b/app/src/main/res/layout/fragment_age.xml
@@ -7,7 +7,7 @@
 
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".GenderFragment">
+    tools:context=".ui.login_and_register.GenderFragment">
 
     <TextView
         style="@style/TextAppearance.Material3.TitleLarge"
