--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,12 +8,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tb_homeToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue" />
-
         <TextView
             android:id="@+id/tv_myWorkouts"
             style="@style/TextAppearance.Material3.TitleLarge"
@@ -23,7 +15,7 @@
             android:layout_height="wrap_content"
 
             android:layout_margin="@dimen/small_margin"
-            android:text="@string/workouts" />
+            android:text="@string/today_workouts" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_workouts"
