--- a/app/src/main/res/layout/workouts_item.xml
+++ b/app/src/main/res/layout/workouts_item.xml
@@ -1,70 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/small_margin">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/iv_workout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+
             android:contentDescription="@string/image_workout"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/medium_padding">
 
             <TextView
+                android:id="@+id/tv_workoutTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                android:text="titleWorkout" />
+
+                android:textAppearance="?attr/textAppearanceTitleMedium" />
 
             <TextView
+                android:id="@+id/tv_workoutDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+
+                android:layout_margin="@dimen/small_margin"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                android:text="Descrição" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                android:text="Texto de suporte" />
+                android:textColor="?android:attr/textColorSecondary" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+
+            android:layout_margin="@dimen/small_margin"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                style="?attr/borderlessButtonStyle"
+                android:id="@+id/btn_startWorkout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="ação" />
+                style="?attr/borderlessButtonStyle"
+
+                android:layout_marginEnd="@dimen/small_margin"
+                android:text="@string/start" />
 
             <com.google.android.material.button.MaterialButton
-                style="?attr/borderlessButtonStyle"
+                android:id="@+id/btn_editWorkout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ação2" />
+                style="?attr/borderlessButtonStyle"
+
+                android:text="@string/edit" />
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
